Fix title and some other things

--- a/offline_radio/static/index.html
+++ b/offline_radio/static/index.html
@@ -105,7 +105,7 @@ domready()
   elems.player.addEventListener('stalled', (event) => console.log('stalled', event));
   elems.player.addEventListener('suspend', (event) => console.log('suspend', event));
   // elems.player.addEventListener('timeupdate', (event) => console.log('timeupdate', event));
-  elems.player.addEventListener('volumechange', (event) => console.log('volumechange', event));
+  // elems.player.addEventListener('volumechange', (event) => console.log('volumechange', event));
   elems.player.addEventListener('waiting', (event) => console.log('waiting', event));
   
   next_track();
